--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,7 @@ MOBILE PAGE*/
 
 .slideshow-container {
   position: relative;
+
 }
 
 .content h2 {
@@ -593,7 +594,12 @@ MOBILE PAGE*/
   }
 
   .slideshow-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     max-width: 650px;
+
   }
 
 
